Examples/glut_ext/freeglut_std.pp


procedure glutInit(pargc:Plongint; argv:PPchar);cdecl;external glutLib;
procedure glutInitWindowPosition(x:longint; y:longint);cdecl;external glutLib;
procedure glutInitWindowSize(width:longint; height:longint);cdecl;external glutLib;
procedure glutInitDisplayMode(displayMode:dword);cdecl;external glutLib;
(* Const before type ignored *)
procedure glutInitDisplayString(displayMode:Pchar);cdecl;external glutLib;
{
 * Process loop function, see freeglut_main.c
  }
procedure glutMainLoop;cdecl;external glutLib;
{
 * Window management functions, see freeglut_window.c
  }
(* Const before type ignored *)
function glutCreateWindow(title:Pchar):longint;cdecl;external glutLib;
function glutCreateSubWindow(window:longint; x:longint; y:longint; width:longint; height:longint):longint;cdecl;external glutLib;
procedure glutDestroyWindow(window:longint);cdecl;external glutLib;
procedure glutSetWindow(window:longint);cdecl;external glutLib;
function glutGetWindow:longint;cdecl;external glutLib;
(* Const before type ignored *)
procedure glutSetWindowTitle(title:Pchar);cdecl;external glutLib;
(* Const before type ignored *)
procedure glutSetIconTitle(title:Pchar);cdecl;external glutLib;
procedure glutReshapeWindow(width:longint; height:longint);cdecl;external glutLib;
procedure glutPositionWindow(x:longint; y:longint);cdecl;external glutLib;
procedure glutShowWindow;cdecl;external glutLib;
procedure glutHideWindow;cdecl;external glutLib;
procedure glutIconifyWindow;cdecl;external glutLib;
procedure glutPushWindow;cdecl;external glutLib;
procedure glutPopWindow;cdecl;external glutLib;
procedure glutFullScreen;cdecl;external glutLib;
{
 * Display-connected functions, see freeglut_display.c
  }
procedure glutPostWindowRedisplay(window:longint);cdecl;external glutLib;
procedure glutPostRedisplay;cdecl;external glutLib;
procedure glutSwapBuffers;cdecl;external glutLib;
{
 * Mouse cursor functions, see freeglut_cursor.c
  }
procedure glutWarpPointer(x:longint; y:longint);cdecl;external glutLib;
procedure glutSetCursor(cursor:longint);cdecl;external glutLib;
{
 * Overlay stuff, see freeglut_overlay.c
  }
procedure glutEstablishOverlay;cdecl;external glutLib;
procedure glutRemoveOverlay;cdecl;external glutLib;
procedure glutUseLayer(layer:TGLenum);cdecl;external glutLib;
procedure glutPostOverlayRedisplay;cdecl;external glutLib;
procedure glutPostWindowOverlayRedisplay(window:longint);cdecl;external glutLib;
procedure glutShowOverlay;cdecl;external glutLib;
procedure glutHideOverlay;cdecl;external glutLib;
{
 * Menu stuff, see freeglut_menu.c
  }
  type glutCreateMenu_func=      procedure (menu:longint);
function glutCreateMenu(callback:glutCreateMenu_func):longint;cdecl;external glutLib;
procedure glutDestroyMenu(menu:longint);cdecl;external glutLib;
function glutGetMenu:longint;cdecl;external glutLib;
procedure glutSetMenu(menu:longint);cdecl;external glutLib;
(* Const before type ignored *)
procedure glutAddMenu(_label:Pchar; value:longint);cdecl;external glutLib;
(* Const before type ignored *)
procedure glutAddSubMenu(_label:Pchar; subMenu:longint);cdecl;external glutLib;
(* Const before type ignored *)
procedure glutChangeToMenu(item:longint; _label:Pchar; value:longint);cdecl;external glutLib;
(* Const before type ignored *)
procedure glutChangeToSubMenu(item:longint; _label:Pchar; value:longint);cdecl;external glutLib;
procedure glutRemoveMenuItem(item:longint);cdecl;external glutLib;
procedure glutAttachMenu(button:longint);cdecl;external glutLib;
procedure glutDetachMenu(button:longint);cdecl;external glutLib;
{
 * Global callback functions, see freeglut_callbacks.c
  }
  type glutTimerFunc_func=      procedure (menu:longint);
procedure glutTimerFunc(time:dword; callback:glutTimerFunc_func; value:longint);cdecl;external glutLib;
//
//procedure glutIdleFunc(callback:procedure );cdecl;external glut;
//{
// * Window-specific callback functions, see freeglut_callbacks.c
//  }

type TglutKeyboardFunc_func=        procedure (para1:byte; para2:longint; para3:longint);cdecl;
procedure glutKeyboardFunc(callback:TglutKeyboardFunc_func);cdecl;external glutLib;
//procedure glutSpecialFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external glut;
//procedure glutReshapeFunc(callback:procedure (para1:longint; para2:longint));cdecl;external glut;
//procedure glutVisibilityFunc(callback:procedure (para1:longint));cdecl;external glut;

type Tfunc0=procedure;cdecl;
procedure glutDisplayFunc(callback:Tfunc0 );cdecl;external glutLib;
//procedure glutMouseFunc(callback:procedure (para1:longint; para2:longint; para3:longint; para4:longint));cdecl;external glut;
//procedure glutMotionFunc(callback:procedure (para1:longint; para2:longint));cdecl;external glut;
//procedure glutPassiveMotionFunc(callback:procedure (para1:longint; para2:longint));cdecl;external glut;
//procedure glutFunc(callback:procedure (para1:longint));cdecl;external glut;
//procedure glutKeyboardUpFunc(callback:procedure (para1:byte; para2:longint; para3:longint));cdecl;external glut;
//procedure glutSpecialUpFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external glut;
//procedure glutJoystickFunc(callback:procedure (para1:dword; para2:longint; para3:longint; para4:longint); pollInterval:longint);cdecl;external glut;
//procedure glutMenuStateFunc(callback:procedure (para1:longint));cdecl;external glut;
//procedure glutMenuStatusFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external glut;
//procedure glutOverlayDisplayFunc(callback:procedure );cdecl;external glut;
//procedure glutWindowStatusFunc(callback:procedure (para1:longint));cdecl;external glut;
//procedure glutSpaceballMotionFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external glut;
//procedure glutSpaceballRotateFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external glut;
//procedure glutSpaceballButtonFunc(callback:procedure (para1:longint; para2:longint));cdecl;external glut;
//procedure glutButtonBoxFunc(callback:procedure (para1:longint; para2:longint));cdecl;external glut;
//procedure glutDialsFunc(callback:procedure (para1:longint; para2:longint));cdecl;external glut;
//procedure glutTabletMotionFunc(callback:procedure (para1:longint; para2:longint));cdecl;external glut;
//procedure glutTabletButtonFunc(callback:procedure (para1:longint; para2:longint; para3:longint; para4:longint));cdecl;external glut;
{
 * State setting and retrieval functions, see freeglut_state.c
  }
function glutGet(query:TGLenum):longint;cdecl;external glutLib;
function glutDeviceGet(query:TGLenum):longint;cdecl;external glutLib;
function glutGetModifiers:longint;cdecl;external glutLib;
function glutLayerGet(query:TGLenum):longint;cdecl;external glutLib;
{
 * Font stuff, see freeglut_font.c
  }
procedure glutBitmapCharacter(font:pointer; character:longint);cdecl;external glutLib;
function glutBitmapWidth(font:pointer; character:longint):longint;cdecl;external glutLib;
procedure glutStrokeCharacter(font:pointer; character:longint);cdecl;external glutLib;
function glutStrokeWidth(font:pointer; character:longint):longint;cdecl;external glutLib;
(* Const before type ignored *)
function glutBitmapLength(font:pointer; _string:Pbyte):longint;cdecl;external glutLib;
(* Const before type ignored *)
function glutStrokeLength(font:pointer; _string:Pbyte):longint;cdecl;external glutLib;
{
 * Geometry functions, see freeglut_geometry.c
  }
procedure glutWireCube(size:TGLdouble);cdecl;external glutLib;
procedure glutSolidCube(size:TGLdouble);cdecl;external glutLib;
procedure glutWireSphere(radius:TGLdouble; slices:TGLint; stacks:TGLint);cdecl;external glutLib;
procedure glutSolidSphere(radius:TGLdouble; slices:TGLint; stacks:TGLint);cdecl;external glutLib;
procedure glutWireCone(base:TGLdouble; height:TGLdouble; slices:TGLint; stacks:TGLint);cdecl;external glutLib;
procedure glutSolidCone(base:TGLdouble; height:TGLdouble; slices:TGLint; stacks:TGLint);cdecl;external glutLib;
procedure glutWireTorus(innerRadius:TGLdouble; outerRadius:TGLdouble; sides:TGLint; rings:TGLint);cdecl;external glutLib;
procedure glutSolidTorus(innerRadius:TGLdouble; outerRadius:TGLdouble; sides:TGLint; rings:TGLint);cdecl;external glutLib;
procedure glutWireDodecahedron;cdecl;external glutLib;
procedure glutSolidDodecahedron;cdecl;external glutLib;
procedure glutWireOctahedron;cdecl;external glutLib;
procedure glutSolidOctahedron;cdecl;external glutLib;
procedure glutWireTetrahedron;cdecl;external glutLib;
procedure glutSolidTetrahedron;cdecl;external glutLib;
procedure glutWireIcosahedron;cdecl;external glutLib;
procedure glutSolidIcosahedron;cdecl;external glutLib;
{
 * Teapot rendering functions, found in freeglut_teapot.c
 * NB: front facing polygons have clockwise winding, not counter clockwise
  }
procedure glutWireTeapot(size:TGLdouble);cdecl;external glutLib;
procedure glutSolidTeapot(size:TGLdouble);cdecl;external glutLib;
{
 * Game mode functions, see freeglut_gamemode.c
  }
(* Const before type ignored *)
procedure glutGameModeString(_string:Pchar);cdecl;external glutLib;
function glutEnterGameMode:longint;cdecl;external glutLib;
procedure glutLeaveGameMode;cdecl;external glutLib;
function glutGameModeGet(query:TGLenum):longint;cdecl;external glutLib;
{
 * Video resize functions, see freeglut_videoresize.c
  }
function glutVideoResizeGet(query:TGLenum):longint;cdecl;external glutLib;
procedure glutSetupVideoResizing;cdecl;external glutLib;
procedure glutStopVideoResizing;cdecl;external glutLib;
procedure glutVideoResize(x:longint; y:longint; width:longint; height:longint);cdecl;external glutLib;
procedure glutVideoPan(x:longint; y:longint; width:longint; height:longint);cdecl;external glutLib;
{
 * Colormap functions, see freeglut_misc.c
  }
procedure glutSetColor(color:longint; red:TGLfloat; green:TGLfloat; blue:TGLfloat);cdecl;external glutLib;
function glutGetColor(color:longint; component:longint):TGLfloat;cdecl;external glutLib;
procedure glutCopyColormap(window:longint);cdecl;external glutLib;
{
 * Misc keyboard and joystick functions, see freeglut_misc.c
  }
procedure glutIgnoreKeyRepeat(ignore:longint);cdecl;external glutLib;
procedure glutSetKeyRepeat(repeatMode:longint);cdecl;external glutLib;
procedure glutForceJoystickFunc;cdecl;external glutLib;
{
 * Misc functions, see freeglut_misc.c
  }
(* Const before type ignored *)
function glutExtensionSupported(extension:Pchar):longint;cdecl;external glutLib;
procedure glutReportErrors;cdecl;external glutLib;
{ Comment from glut.h of classic GLUT:

   Win32 has an annoying issue where there are multiple C run-time
   libraries (CRTs).  If the executable is linked with a different CRT
   from the GLUT DLL, the GLUT DLL will not share the same CRT static
   data seen by the executable.  In particular, atexit callbacks registered
   in the executable will not be called if GLUT calls its (different)
   exit routine).  GLUT is typically built with the
   "/MD" option (the CRT with multithreading DLL support), but the Visual
   C++ linker default is "/ML" (the single threaded CRT).

   One workaround to this issue is requiring users to always link with
   the same CRT as GLUT is compiled with.  That requires users supply a
   non-standard option.  GLUT 3.7 has its own built-in workaround where
   the executable's "exit" function pointer is covertly passed to GLUT.
   GLUT then calls the executable's exit function pointer to ensure that
   any "atexit" calls registered by the application are called if GLUT
   needs to exit.

   Note that the __glut*WithExit routines should NEVER be called directly.
   To avoid the atexit workaround, #define GLUT_DISABLE_ATEXIT_HACK.  }
{ to get the prototype for exit()  }

implementation

{ was #define dname def_expr }
function GLUT_STROKE_ROMAN : pointer;
  begin
    GLUT_STROKE_ROMAN:=pointer($0000);
  end;
